# cookiecutter-cdktf-python

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.cdktf_directory_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cdktf.json  pyproject.toml
{{ cookiecutter.cdktf_directory_name }}/scripts/: build-lambda.sh  dev-setup.sh  push-to-ecr.sh  run-lambda.sh  test-lambda.sh
{{ cookiecutter.cdktf_directory_name }}/src/{{ cookiecutter.cdktf_module_name }}/: app_props.py  main.py
{{ cookiecutter.cdktf_directory_name }}/src/{{ cookiecutter.cdktf_module_name }}/construct/: lambda_construct.py
{{ cookiecutter.cdktf_directory_name }}/src/{{ cookiecutter.cdktf_module_name }}/construct/lambda_go/: Dockerfile  go.mod
{{ cookiecutter.cdktf_directory_name }}/src/{{ cookiecutter.cdktf_module_name }}/construct/lambda_python/: Dockerfile  lambda_function.py  pyproject.toml
{{ cookiecutter.cdktf_directory_name }}/src/{{ cookiecutter.cdktf_module_name }}/stack/: base.py  ecr_repo.py  main.py  terraform_backend.py
{{ cookiecutter.cdktf_directory_name }}/tests/: test_app_props.py
