[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.11"
aws-lambda-typing = "^2.18.0"
structlog = "^23.3.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["essential", "s3"], version = "^1.34.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
